src/objects/User.object
<CustomObject>
    <fields>
        <fullName>USER_BypassTrigger__c</fullName>
        <globalPicklist>TriggerList</globalPicklist>
        <label>Bypass Trigger</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>USER_BypassValidationRule__c</fullName>
        <globalPicklist>ValidationRulesList</globalPicklist>
        <label>Bypass Validation Rule</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>USER_BypassWorkflow__c</fullName>
        <globalPicklist>WorkflowList</globalPicklist>
        <label>Bypass Workflow</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>USER_DataSteward__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if this user is part of a Data Steward Team. Data Steward users will be allowed to create accounts without approval process.</inlineHelpText>
        <label>Data Steward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USER_Geography__c</fullName>
        <globalPicklist>GeographiesList</globalPicklist>
        <label>Geography</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USER_Network__c</fullName>
        <globalPicklist>NetworkList</globalPicklist>
        <label>Network</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USER_isGeneric__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if you are creating a Generic User</inlineHelpText>
        <label>Generic User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>